changed client-to-server expansion notification mechanism implemented selection lots of jsdoc